screens/urbania-recommendation/src/urbania-recommendation.module.scss
// stylelint-disable max-nesting-depth

@import '~@micromag/core/scss/variables';
@import '~@micromag/core/scss/placeholders';

.container {
    @extend %screen;
    align-items: flex-start;

    .background {
        @extend %fullscreen;
        z-index: 0;
    }

    .content {
        z-index: 1;
    }

    .empty,
    .emptyText {
        @extend %empty;
        width: 100%;
    }

    .emptyText,
    .emptyVisual {
        height: 50px;
    }

    .emptySponsor,
    .emptyVisual {
        width: calc(100% - 10px);
    }

    .emptySponsor {
        padding: 5px;
    }

    .emptyCategory {
        @extend %empty;
        padding: 10px;
        transform: rotate(180deg);
        writing-mode: vertical-lr;
    }

    .callToAction {
        transition: opacity 0.2 ease-out;

        &.disabled {
            opacity: 0;
        }
    }

    .textCard {
        display: flex;
        flex-direction: column;
        width: 90%;
        margin: 0 auto;
        border-radius: 10px;
        background-color: #fff;
        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
        color: #000;

        &.isPlaceholder {
            background-color: $gray-500;
        }

        &.appear {
            animation: appear 1s ease-in-out;
            animation-delay: 0.5s;
            opacity: 0;
            animation-fill-mode: forwards;
        }

        &.visualBottom {
            flex-direction: column-reverse;

            .visualContainer {
                flex-direction: column-reverse;
            }
        }
    }

    .visualContainer {
        display: flex;
        flex-direction: column;
        width: 100%;
        height: 100%;
        max-height: 250px;
        overflow: hidden;
    }

    .sponsor {
        z-index: 1;
        width: 100%;
        padding: 5px 10px 3px;
        background-color: #fffc00;
        font-family: 'Agrandir', sans-serif;
        font-size: 10px;
        line-height: 1;
        text-align: center;
        text-transform: uppercase;

        > p {
            margin-top: 0;
            margin-bottom: 0;
        }

        &.hasVisual {
            position: absolute;
        }
    }

    .sponsorPlaceholder {
        padding: 10px;
    }

    .visualWrapper {
        // position: absolute;
        top: 0;
        left: 0;
        // width: 100%;
    }

    .text {
        display: flex;
    }

    .category {
        width: 20%;
        padding: 12px 10px 6px;
        transform: rotate(180deg);
        font-family: 'Agrandir Tight', sans-serif;
        font-size: 28px;
        font-weight: 900;
        text-align: center;
        text-transform: uppercase;
        writing-mode: vertical-lr;
    }

    .categoryPlaceholder {
        width: 20%;
        padding: 10px;
        background-color: $gray-800;
    }

    .textContent {
        width: 80%;
        padding: 14px 8px 14px 0;

        &.isPlaceholder {
            margin-left: 2px;
            padding: 10px;
            background-color: $gray-200;
        }
    }

    .titleContainer {
        overflow-wrap: break-word;
    }

    .title {
        border-bottom: 1px solid #000;
        font-family: 'Agrandir Tight', sans-serif;
        font-size: 1.2rem;
        font-weight: 700;
        text-transform: uppercase;
    }

    .date,
    .location {
        padding-top: 3px;
        border-bottom: 1px solid #000;
        font-family: 'Agrandir Tight', sans-serif;
        text-transform: uppercase;
    }

    .date {
        font-size: 14px;
    }

    .location {
        font-size: 12px;
        font-weight: 700;
    }

    .description {
        padding-top: 3px;
        font-family: 'Agrandir Tight', sans-serif;
        font-size: 12px;
        font-weight: 300;

        p {
            margin-bottom: 0.5em;

            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    .descriptionPlaceholder {
        padding: 10px;
        padding-bottom: 30px;
    }

    &.isPlaceholder {
        .layout {
            padding: 10px;
        }
    }
}

@keyframes appear {
    0% {
        opacity: 0;
    }

    66% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

